# HyCoRAG

./: .gitignore  README.md  pyproject.toml
docs/: critical_evaluation.md  novelty_enhancement_plan.md  phase1_progress.md
hycorag/: config.py
hycorag/data/: __init__.py  collate.py  datasets.py  schemas.py
hycorag/evaluation/: __init__.py  dataloaders.py  experiment_runner.py  experiments.py  metrics.py  structure_analyzer.py
hycorag/models/: __init__.py  cell_header_encoder.py  concept_distill.py  concept_router.py  distillation_loss.py  domain_adapter.py  table_encoder.py
hycorag/rag/: __init__.py  llm_client.py  pipeline.py  retriever.py
scripts/: check_configs.py  debug_concepts.py  debug_rag_igbench.py  debug_retriever_metadata.py  inspect_datasets.py  run_baseline_rag.py  run_hycorag.py  run_p0_rq1_validation.py  run_p1_rq2_validation.py  run_rq2_experiment.py  run_rq3_experiment.py  test_cell_accuracy.py  test_header_first.py  test_hybrid_strategy.py  test_improved_routing.py  test_llm.py  test_structure_analyzer.py
tests/: test_cell_header_encoder.py  test_concept_distill.py  test_datasets.py  test_rag_pipeline.py
