[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hycorag"
version = "0.1.0"
description = "HyCoRAG: Hybrid Concept Distillation for Self-Evolving Table Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "transformers",
    "sentence-transformers",
    "numpy",
    "pandas",
    "datasets",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
